log
Wed 13 Sep 2023 07:21:57 AM UTC: 
 tests:  1|8
total_score: 0/70
20b22ea
Wed 13 Sep 2023 07:30:13 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
7a69e85
Wed 13 Sep 2023 07:31:26 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:14: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |     TreeMap *map = (TreeMap *)malloc(sizeof(TreeMap));
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
a9cb1af
Wed 13 Sep 2023 07:32:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
1f23440
